[tool.poetry]
name = "aocontribs"
version = "0.1.0"
description = "Atomic orbital contributions"
authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
